lintian (2.1.4) UNRELEASED; urgency=low

  * Summary of tag changes:
    + Added
      - control-interpreter-in-usr-local (split from
         interpreter-in-usr-local)
      - control-interpreter-without-depends
      - copyright-with-old-dh-make-debian-copyright
      - desktop-mimetype-without-update-call
      - forbidden-postrm-interpreter
      - preinst-interpreter-without-predepends
      - script-calls-init-script-directly
      - unknown-control-interpreter (split from unusual-interpreter)
    + Removed
      - desktop-file-but-no-dh_desktop-call
      - interpreter-without-predep

  * checks/copyright-file{,.desc}:
    + [RA] Warn (severity: wishlist) about the old dh_make packaging
      copyright, which used (C) without the word or symbol.  Based on a
      patch by Raphael Geissert.  (Closes: #497347)
  * checks/menu-format{,.desc}:
    + [RA] If a *.desktop file contains a MimeType key, check that the
      postinst calls update-desktop-database.  (Closes: #488832)
  * checks/rules{,.desc}:
    + [RA] Remove desktop-file-but-no-dh_desktop-call.  The only action of
      dh_desktop is now checked by desktop-mimetype-without-update-call;
      dh_desktop is unnecessary with other *.desktop files.
  * checks/scripts{,.desc}:
    + [RA] Overhaul checking of maintainer script and config interpreters:
      - postrm scripts must use an essential interpreter.
      - Only preinst scripts require Pre-Depends; Depends is sufficient for
        postinst and prerm scripts.  (Closes: #508307)
      - Separate unknown-control-interpreter from unusual-interpreter
        since it's much more likely to be an error.
      - Separate control-interpreter-in-usr-local from
        interpreter-in-usr-local since the severity is higher.
      - unusual-control-interpreter is certain, not possible.
      - Suppress some cases of multiple tags about the same basic problem.
    + [RA] Check for scripts in /etc that call init scripts directly