@@ -1,0 +1,13 @@
+# This is a list of known debhelper config files which consist of a list
+# of filenames.  It's used for tests that look for problems in debhelper
+# processing of file names, such as using glob characters that aren't
+# guaranteed to work.
+
+dirs
+docs
+examples
+info
+install
+manpages
+sgmlcatalogs
+wm
