@@ -1,0 +1,1 @@
+{foo,bar}.txt usr/share/debhelper
