@@ -1,0 +1,1 @@
+W: debhelper-brace-expansion source: brace-expansion-in-debhelper-config-file debian/install
